RESOLVED FIXED84998
Cleanup WebMediaPlayer enum values that didn't match Chromium style guidelines
https://bugs.webkit.org/show_bug.cgi?id=84998
Summary Cleanup WebMediaPlayer enum values that didn't match Chromium style guidelines
Aaron Colwell
Reported 2012-04-26 13:34:03 PDT
This is finish the WebMediaPlayer enum style cleanup that was started in http://webk.it/84046 . The Chromium code now uses the new enum value names so the old ones can be removed now.
Attachments
Patch (4.55 KB, patch)
2012-04-26 13:36 PDT, Aaron Colwell
no flags
Aaron Colwell
Comment 1 2012-04-26 13:36:47 PDT
WebKit Review Bot
Comment 2 2012-04-26 13:41:04 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 3 2012-04-26 18:06:04 PDT
Comment on attachment 139059 [details] Patch Clearing flags on attachment: 139059 Committed r115393: <http://trac.webkit.org/changeset/115393>
WebKit Review Bot
Comment 4 2012-04-26 18:06:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.