Cleanup WebMediaPlayer enum values that didn't match Chromium style guidelines https://bugs.webkit.org/show_bug.cgi?id=84998

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-26
Reviewed by Darin Fisher.

* public/WebMediaPlayer.h:
(WebKit::WebMediaPlayer::generateKeyRequest):
(WebKit::WebMediaPlayer::addKey):
(WebKit::WebMediaPlayer::cancelKeyRequest):

Canonical link: https://commits.webkit.org/102531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115393 268f45cc-cd09-0410-ab3c-d52691b4dbfc